[package]
name = "dicom_json_wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "dicom_json_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
dicom-json = "0.9.0"
dicom-object = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = "0.2.113"
